--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   box-shadow: 0px 1px 5px 2px #bfceef;
   cursor: pointer;
 }
-
+/* 
 #btn-particles {
   width: 100px;
   height: 100px;
@@ -27,8 +27,8 @@ body {
   color: #eee;
   font-family: monospace;
   z-index: 5;
-  /* filter: url(#gooeyness); */
-}
+} 
+*/
 
 #btn:active {
   transform: scale(0.4) translate(-15%, -15%);
@@ -50,20 +50,40 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: bold;
-  font-size: 6vh;
+  font-size: 2vh;
 }
 
 .memecasesImg {
-  width: 30vh;
-  height: 30vh;
+  width: 20vh;
+  height: 20vh;
 }
 
 .urlimg {
-  width: 132vh;
+  width: 82vh;
   height: 76vh;
 }
 
 span {
   font-weight: 777;
   font-size: 8vh;
+}
+h1 {
+  color: crimson;
+}
+@media (min-width: 500px) and (max-width: 1200px) {
+  p {
+    font-size: 1vh;
+    color: green;
+    background-color: greenyellow;
+    display: flex;
+    flex: row;
+  }
+
+  .results > p {
+    font-size: 12px;
+    color: green;
+    background-color: greenyellow;
+    display: flex;
+    flex: row;
+  }
 }
