--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: bold;
-  display: flex;
   justify-content: center;
   background-color: black;
   color: #ffffff;
@@ -53,14 +52,14 @@ body {
   font-size: 2vh;
 }
 
-.memecasesImg {
-  width: 20vh;
-  height: 20vh;
+#memecasesImg {
+  width: 55vh;
+  height: 35vh;
 }
 
 .urlimg {
-  width: 82vh;
-  height: 76vh;
+  width: 12vh;
+  height: 16vh;
 }
 
 span {
@@ -70,9 +69,9 @@ span {
 h1 {
   color: crimson;
 }
-@media (min-width: 500px) and (max-width: 1200px) {
+@media (min-width: 414px) and (max-width: 736px) {
   p {
-    font-size: 1vh;
+    font-size: 0.75vh;
     color: green;
     background-color: greenyellow;
     display: flex;
@@ -80,7 +79,7 @@ h1 {
   }
 
   .results > p {
-    font-size: 12px;
+    font-size: 13px;
     color: green;
     background-color: greenyellow;
     display: flex;
